$Id$

1.1.0: (CVS)
	- rearranged modem init so that failed modems will be skipped
	  (thanks to Peter Smith for pointing that out).
	- adding timing arguments to command completion. (recommended
	  by Russell Adams)
	- added the "null" PC, inspired by a patch from Bill Ayres.

1.0.0: (2005-02-23)
	- changed how email2page handles the header regex list.  This
	  will allow each rule to match each header line, rather
	  that just the first match.  Recommended by Erastus Z Allen.
	- changed syslog-facility default to "daemon".  To keep
	  prior behavior, set "syslog-facility = local6".
	- created syslog-minlevel with default of "info". To keep
	  prior behavior, set "syslog-minlevel = debug".
	- creating a "stable" version since I'll never reach 1.0.0  :)
	- updated copyright years
	- added older debian rules to CVS
	- created sendpage.spec from many sources
	- handling "strict parity" from Device::SerialPort
	- added "chars-per-block" config to the sendpage.cf examples
	- fixed field-spanning block code bug noticed by David St. John
	- added DBI support from Todd T. Fries
	- found evil SNPP hang bug, funded by David St. John
	- added few more comments, and renamed functions more sensibly
	- fixed up calls to KeesLog to not allow format strings to show up
	  (thanks to Peter Smith for persisting with his queries about this)

0.9.14: (31May2002)
	- oops!  I recreated an earlier bug where splits would destroy
	  the page text for the next person in an alias.  Fixed in
	  SNPPServer.pm
        - corrected 8-bit CRC bug, thanks to Mark Frey
        - added UCP support, thanks to a great patch from Adrian Steiner

0.9.13: (04Nov2001)
	- added parameters and code for completion command execution.
	- fixed lock-file parsing to handle minicom's strange format.
	- allowed pid "0" to exist in lockfiles
	- wasn't including Sys::Hostname.  whoops!
	- changed "ignore-carrier" to "carrier-detect" multi-selection
	- FINALLY found the DESTROY bug with Modem.pm.